Working on saving observation. User awarded for submitting an observation
